test: member 픽스처 추가